// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clearbutton snapshot should not render 1`] = `
<div
  className="input-group-addon false "
  onClick={[Function]}
>
  X
</div>
`;

exports[`Clearbutton snapshot should render correctly 1`] = `
<div
  className="input-group-addon visible "
  onClick={[Function]}
>
  X
</div>
`;
